migrate test to jackson3